Avoid media query overlap

--- a/_scss/base/mixins.scss
+++ b/_scss/base/mixins.scss
@@ -9,7 +9,9 @@
 
 // Max-width based
 @mixin bp-max($size) {
-  @media screen and (max-width: $size) {
+  // Using SCSS calc() to reduce variable slightly
+  // on max-width media queries to avoid style collision
+  @media screen and (max-width: calc(#{size} - 0.01)) {
     @content;
   }
 }
